# GildedRose-Python-Kata

./: README.md  pyproject.toml  requirements.txt  test_gilded_rose.py
